fixed code spacing and took out commented out code

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -29,7 +29,7 @@ img {
 }
 
 .city-info:hover {
-  background-color: rgba(67, 104, 64, 0.747);
+  background-color: rgba(67, 104, 64, 0.884);
   cursor: pointer;
 }
 .grid {
